[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brunoflow"
version = "0.0.1"
description = 'Brunoflow - a simple, well-documented, pedagogical deep learning framework implemented entirely in Python.'
readme = "README.md"
requires-python = ">3.8"
keywords = ["ml", "autodiff", "backpropagation", "pedagogical"]
license = {file = "LICENSE"}
authors = [
  {name = "Kevin Du", email = "kevin.du20@gmail.com"},
  {name = "Daniel Ritchie", email = "daniel_ritchie@brown.edu"},
]
dependencies = [
  'numpy >= 1.23.4',
  'scipy >= 1.9.3',
  'graphviz >= 0.20.1',
  'colorama >= 0.4.6',
]

# [tool.setuptools]
# py-modules = ["__init__"]
